--- a/css/style.css
+++ b/css/style.css
@@ -1689,7 +1689,7 @@ padding-top: 3px;
 	.flexslider .slide-caption {
 		width: 90%; 
 		padding: 2%; 
-		position: absolute; 
+		position: relative; 
 		left: 0; 
 		bottom: -40px; 
 	}
