--- a/css/style.css
+++ b/css/style.css
@@ -1756,12 +1756,11 @@ padding-top: 3px;
 	.search{
 		float:left;
 	}
-    .flex-caption{
-		font-size:15px;
+    .flex-caption h3{
+		font-size:14px;
 	}
 	.flexslider{
-	
-		display:none;
+	    display:none;
 	}
 
 
